# QtProjectTemplate

./: .dockerignore  .gitattributes  .gitmodules  CMakeLists.txt  README.md  configure.py  qtproject.desktop
.devcontainer/: devcontainer.json
docs/: building_linux.md  building_windows.md
scripts/: system.py  third_party_info.py  update_qt_version.py
scripts/linux/: Dockerfile  build_qt.sh
scripts/linux/ubuntu/: prepare.sh
scripts/windows/: build_qt.bat
src/: main.cpp
